--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,75 @@
   height: 100%;
 }
 
+ul {
+  padding-inline-start: 0;
+  list-style: none;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 50px;
+}
+
+.theme-dark {
+  background: #1c2022;
+  color: white;
+  min-height: 100vh;
+}
+
+.theme-dark a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.theme-light a {
+  color: red;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar-light a {
+  color: black;
+}
+
+.navbar-links {
+  display: flex;
+}
+
+.navbar-link {
+  padding-right: 10px;
+}
+
+.navbar-lightswitch {
+  border: none;
+}
+
+.navbar-lightswitch-dark {
+  background: #1c2022;
+}
+
+.post-listing {
+  margin: 10px 0 10px 0;
+}
+
+.meta-info {
+  color: #808080;
+}
+
+.meta-info a {
+  text-decoration: underline;
+  font-weight: normal;
+}
+
+.post-comment {
+  background: rgba(128, 128, 128, 0.1411764705882353);
+  padding: 10px 8px 10px 8px;
+  margin-bottom: 10px;
 }
